grammar.js
    source_file: $ => repeat($._declaration),

    line_comment: $ => token(seq(
      '//',
      /[^\n]*/
    )),

    _declaration: $ => choice(
      $.variable_declaration,
      $.function_declaration,
      $.enum_declaration,
    ),


    _expression: $ => choice(
      $._atomic_expression,
      $.generic_expression,
      $.unary_expression,
      $.binary_expression,
      $.postfix_expression,
      $.control_transfer_statement,
    ),


    _pattern: $ => choice(
      $.identifier,
      $.tuple_pattern,
    ),

    variable_declaration: $ => seq(
      choice('let', 'var', 'const'),
      field('name', $._pattern),
      optional(field('type', $.type_annotation)),
      optional(field('value', $.initializer)),
      optional(';')
    ),

    initializer: $ => seq('=', $._expression),


    type_annotation: $ => seq(':', $._type),


    _type: $ => choice(
      $.primitive_type,
      $.function_type,
      $.generic_type,
      $.tuple_type,
      $.scoped_type_identifier,
      $.identifier,
    ),

    primitive_type: $ => choice(
      'Bool', 'Rune', 'String', 'Unit', 'Nothing', 'This',
      'Int8', 'Int16', 'Int32', 'Int64', 'IntNative',
      'UInt8', 'UInt16', 'UInt32', 'UInt64', 'UIntNative',
      'Float16', 'Float32', 'Float64'
    ),


    // 元组类型 (规约 2.1.7)
    identifier: ($) =>
      choice(
        LEXICAL_IDENTIFIER,
        /`[^\r\n` ]*`/,       // leave checking work for compiler  
        /\$[0-9]+/,
      ),

    integer_literal: ($) => token(seq(optional(/[1-9]/), DEC_DIGITS)),
    boolean_literal: ($) => choice("true", "false"),
    // String literals
    rune_literal: $ => token(seq(
      'r',
      choice(
        seq("'", choice(/[^'\\]/, ESCAPE_SEQUENCE), "'"),
        seq('"', choice(/[^"\\]/, ESCAPE_SEQUENCE), '"')
      )
    )),
    line_string_literal: ($) =>
      seq(
        '"',
        repeat(choice(field("text", $._line_string_content), $._interpolation)),
        '"'
      ),
    _line_string_content: ($) => choice($.line_str_text, $.str_escaped_char),
    line_str_text: ($) => /[^\\"]+/,
    _interpolation: ($) => seq("\\(", $._interpolation_contents, ")"),
