test/corpus/declare.txt
====================================
Variable Declaration with Type
====================================
let `let` = "a" ;
let a: Int32 = 123;
var b = "hello world";
const c = true;
let d = r'好';

// 字符串插值
let name = "仓颉";
let message = "你好, ${name}!";
---

(source_file
  (variable_declaration
    name: (identifier)
    value: (initializer
      (line_string_literal
        text: (line_str_text))))
  (variable_declaration
    name: (identifier)
    type: (type_annotation
      (primitive_type))
    value: (initializer
      (integer_literal)))
  (variable_declaration
    name: (identifier)
    value: (initializer
      (line_string_literal
        text: (line_str_text))))
  (variable_declaration
    name: (identifier)
    value: (initializer
      (boolean_literal)))
  (variable_declaration
    name: (identifier)
    value: (initializer
      (rune_literal)))
  (line_comment)
  (variable_declaration
    name: (identifier)
    value: (initializer
      (line_string_literal
        text: (line_str_text))))
  (variable_declaration
    name: (identifier)
    value: (initializer
      (line_string_literal
        text: (line_str_text)))))
